[gd_scene load_steps=4 format=3 uid="uid://deqlqbwpk4i2c"]

[ext_resource type="Script" path="res://Object/object.gd" id="1_304uw"]
[ext_resource type="Texture2D" uid="uid://b1we58y6n8fru" path="res://asset/P3K.png" id="1_xhxhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ce18l"]
size = Vector2(321.667, 296.333)

[node name="P3K" type="Node2D"]
script = ExtResource("1_304uw")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.75, 0.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6.66667)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_ce18l")

[node name="P3K" type="Sprite2D" parent="."]
texture = ExtResource("1_xhxhc")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
